changes from bitbkt

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,16 @@
+@inproceedings{Cleaveland90,
+  author    = {Rance Cleaveland},
+  title     = {On Automatically Distinguishing Inequivalent Processes},
+  booktitle = {Computer-Aided Verification, Proceedings of a {DIMACS} Workshop 1990},
+  pages     = {463--476},
+  volume    = {3},
+  publisher = {{DIMACS/AMS}},
+  year      = {1991},
+  timestamp = {Mon, 28 Nov 2016 20:14:44 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/dimacs/Cleaveland90},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{unbound11,
  author = {Weirich, Stephanie and Yorgey, Brent A. and Sheard, Tim},
  title = {Binders Unbound},
@@ -376,7 +389,7 @@ url="http://dx.doi.org/10.1007/s002360050036"
 	url = "http://www.sciencedirect.com/science/article/pii/S0167642397000105",
 
 
-@inproceedings{VicMil94mwb,
+@inproceedings{VicMol94mwb,
  author = {Victor, Bj\"{o}rn and Moller, Faron},
  title = {The Mobility Workbench - A Tool for the pi-Calculus},
  booktitle = {CAV '94},
