--- a/related.tex
+++ b/related.tex
@@ -4,7 +4,7 @@ In this section, we discuss
 nondeterministic programming using monads (Section~\ref{sec:relwork:monad}),
 bisimulation and its characterizing logic (Section~\ref{sec:relwork:logic}),
 and related tools (Section~\ref{sec:relwork:tools}).
-\vspace*{-1.5ex}
+\vspace*{-1ex}
 \subsection{Monadic encodings of Nondeterminism}
 \label{sec:relwork:monad}
 \citet{Wadler85listm} modeled nondeterminism with a list monad.
@@ -22,24 +22,24 @@ was to avoid an instance of undesirable side effects from this trickiness --
 naive combination of laziness and nondeterminism causing needless traversals.
 We expect our code duplication can be lifted by adopting
 such a custom nondeterministic monad.% in place of the list monad.
-\vspace*{-1.5ex}
+\vspace*{-1ex}
 \subsection{Bisimulation and its Characterizing Logic}
 \label{sec:relwork:logic}
-Bound variables in the $\pi$-calculus introduce subtlety on how to instantiate
-those bound variables, hence, lead to the development of different notions of
-labeled semantics: \emph{early} and \emph{late} semantics \cite{Milner92picalcII}
-were developed prior to the \emph{open} semantics. Bisimulations based on early and late
-semantics are not closed under substitutions, hence, not closed under
-input-prefixes.
-% That is, they cannot capture process equivalence across
-% different environments,
-This falls short from the motivation of the $\pi$-calculus
-to model the \emph{mobility} of processes where channel names can be provided
-as inputs during the process execution. This shortcoming has been addressed by
-open bisimulation~\cite{Sangiorgi96acta}, which is closed under substitutions,
-hence, capturing the notion of equivalence across all environments
-(or all possible worlds).
-
+%%% Bound variables in the $\pi$-calculus introduce subtlety on how to instantiate
+%%% those bound variables, hence, lead to the development of different notions of
+%%% labeled semantics: \emph{early} and \emph{late} semantics \cite{Milner92picalcII}
+%%% were developed prior to the \emph{open} semantics. Bisimulations based on early and late
+%%% semantics are not closed under substitutions, hence, not closed under
+%%% input-prefixes.
+%%% % That is, they cannot capture process equivalence across
+%%% % different environments,
+%%% This falls short from the motivation of the $\pi$-calculus
+%%% to model the \emph{mobility} of processes where channel names can be provided
+%%% as inputs during the process execution. This shortcoming has been addressed by
+%%% open bisimulation~\cite{Sangiorgi96acta}, which is closed under substitutions,
+%%% hence, capturing the notion of equivalence across all environments
+%%% (or all possible worlds).
+%%%
 Hennessy--Milner Logic (HML)~\cite{HenMil80hml} is a classical
 characterizing logic for the Calculus of Communicating Systems (CCS)~\cite{Mil82ccs}.
 The duality between diamond and box modalities related by negation 
@@ -57,10 +57,10 @@ of intuitionistic logic. The classical duality between diamond and box modalitie
 no longer hold in \OM. This is why we needed to keep track of pairs of formulae
 for both sides %% and have extra sideway traversals
 during our distinguishing formulae generation in Section~\ref{sec:df}.%
-\vspace*{-1.5ex}
+\vspace*{-1ex}
 \subsection{Tools for Checking Process Equivalence}
 \label{sec:relwork:tools}
-The mobility workbench~\cite{VicMil94mwb} is a tool for the $\pi$-calculus
+The mobility workbench~\cite{VicMol94mwb} is a tool for the $\pi$-calculus
 with features including open bisimulation checking. It is developed using
 an old version of SML/NJ.
 
