--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,18 @@
+@article{McDowell96,
+  author    = {Raymond McDowell and
+               Dale Miller and
+               Catuscia Palamidessi},
+  title     = {Encoding Transition Systems in Sequent Calculus},
+  journal   = {Electr. Notes Theor. Comput. Sci.},
+  volume    = {3},
+  pages     = {138--152},
+  year      = {1996},
+  timestamp = {Mon, 20 Jun 2011 17:31:48 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/entcs/McDowellMP96},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
 @inproceedings{Cleaveland90,
   author    = {Rance Cleaveland},
   title     = {On Automatically Distinguishing Inequivalent Processes},
@@ -585,8 +600,6 @@ url="http://dx.doi.org/10.1007/s002360050036"
  location = {Tallinn, Estonia},
  pages = {192--203},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/1086365.1086390},
- doi = {10.1145/1086365.1086390},
  acmid = {1086390},
  publisher = {ACM},
  address = {New York, NY, USA},
